--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,36 @@
-.wrapper {
+.container {
+    height: 100vh;
     display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 3fr;
+  
 }
-.content-box {
+.container div {
     border: 1px solid black;
 }
 
 
+/* Header */
+.header {
+  grid-column: 2 / 3;
+  
+}
 
+
+/* SideBar */
+.sidebar {
+  grid-column: 1 ;
+  grid-row: 1 / 3;
+  background-color: #759194;
+}
+
+
+
+/* Main content */
+.main-content {
+  grid-column: 2 /3;
+  grid-row: 2 / 4;
+}
 
 
 
@@ -122,6 +146,10 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+ul {
+  list-style: none;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
