--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,27 +1,82 @@
+body {
+  box-sizing: border-box;
+}
+
 .container {
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 250px 3fr;
     grid-template-rows: 1fr 3fr;
   
 }
-.container div {
+.container > div {
     border: 1px solid black;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.primary-links ul {
+
+}
 
 /* Header */
 .header {
   grid-column: 2 / 3;
-  
+  /* Header children Grid  */
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr 1fr;
+  justify-items: center;
+  align-items: center;
 }
 
+/* Header assets */
+
+/* Search section */
+.search-wrapper {
+  position: relative;
+  display: flex;
+  left: 30px;
+}
+.s-button {
+  height: 30px;
+  width: 30px;
+  margin-right: 15px;
+}
+.search-bar {
+  border: 1px solid gray;
+  border-radius: 80px;
+  width: 600px;
+  background-color: lightgray;
+  opacity: 0.4;
+}
+
+/* Bell/icon small/name small section */
+.header-top-right-wrapper {
+  display: flex;
+  
+}
+.bell {
+  height: 30px;
+  width: 30px;
+}
+.avatar-small {
+  height: 40px;
+}
+.avatar-large {
+  height: 70px;
+}
 
 /* SideBar */
 .sidebar {
   grid-column: 1 ;
   grid-row: 1 / 3;
   background-color: #759194;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 
@@ -148,9 +203,7 @@ select {
   font: inherit;
 }
 
-ul {
-  list-style: none;
-}
+
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
