--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,8 @@
 body {
   box-sizing: border-box;
+  font-family: Roboto-black;
+  font-size: ;
+  
 }
 
 .container {
@@ -27,9 +30,9 @@ ul {
   grid-column: 2 / 3;
   /* Header children Grid  */
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr 1fr;
-  justify-items: center;
+  justify-items: flex-start;
   align-items: center;
 }
 
@@ -40,6 +43,7 @@ ul {
   position: relative;
   display: flex;
   left: 30px;
+  grid-column: 1;
 }
 .s-button {
   height: 30px;
@@ -57,7 +61,8 @@ ul {
 /* Bell/icon small/name small section */
 .header-top-right-wrapper {
   display: flex;
-  
+  gap: 30px;
+  grid-column: 3;
 }
 .bell {
   height: 30px;
@@ -66,8 +71,38 @@ ul {
 .avatar-small {
   height: 40px;
 }
+
+/* Header bottom left wrapper */
 .avatar-large {
   height: 70px;
+  grid-column: 1;
+}
+.greeting {
+  width: 100%;
+  grid-column: 2;
+  grid-row: 1;
+}
+.name-large {
+  grid-column: 2;
+}
+
+.header-bottom-left-wrapper {
+  display: grid;
+  grid-template-columns: 70px 70px;
+  grid-template-rows: 50px 50px;
+  grid-column: 1;
+  grid-row: 2;
+  position: relative;
+  left: 30px;
+  
+}
+
+
+/* Header bottom right wrapper*/
+.header-bottom-right-wrapper {
+  display: flex;
+  gap: 50px;
+  grid-column: 3;
 }
 
 /* SideBar */
@@ -141,7 +176,11 @@ ul {
 
 
 
-
+/* font import */
+@font-face {
+  font-family: Roboto-Black;
+  src: url(/home/xian/Projects/Admin-dashboard/assets/Roboto/Roboto-Black.ttf);
+}
 
 /* CSS Reset */
 /* Box sizing rules */
