--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --main-color: #1992D4;
+}
+
 body {
   box-sizing: border-box;
   font-family: Roboto-black;
@@ -116,10 +120,10 @@ ul {
   grid-column: 3;
   margin-right: 30px;
 }
-.header-button {
+.btn {
   width: 90px;
   border-radius: 20%;
-  background-color: #22d3ee;
+  background-color: var(--main-color);
   color: white;
 }
 
@@ -128,7 +132,7 @@ ul {
 .sidebar {
   grid-column: 1 ;
   grid-row: 1 / 3;
-  background-color: #22d3ee;
+  background-color: var(--main-color);
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
 }
@@ -191,7 +195,99 @@ ul {
 
 
 
+/* Material Button Template */
+.btn {
+  position: relative;
 
+  display: block;
+  margin: 30px auto;
+  padding: 0;
+
+  overflow: hidden;
+
+  border-width: 0;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  
+  background-color: var(--main-color);
+  color: #ecf0f1;
+  
+  transition: background-color .3s;
+  height: 30px;
+}
+
+.btn:hover, .btn:focus {
+  background-color: #27ae60;
+}
+
+.btn > * {
+  position: relative;
+}
+
+.btn span {
+  display: block;
+  padding: 12px 24px;
+}
+
+.btn:before {
+  content: "";
+  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  display: block;
+  width: 0;
+  padding-top: 0;
+    
+  border-radius: 100%;
+  
+  background-color: rgba(236, 240, 241, .3);
+  
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.btn:active:before {
+  width: 120%;
+  padding-top: 120%;
+  
+  transition: width .2s ease-out, padding-top .2s ease-out;
+}
+
+/* Styles, not important */
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+html {
+  position: relative;
+  height: 100%;
+}
+
+h2 {
+  font-weight: normal;
+}
+
+.btn.orange {
+  background-color: #e67e22;
+}
+
+.btn.orange:hover, .btn.orange:focus {
+  background-color: #d35400;
+}
+
+.btn.red {
+  background-color: #e74c3c;
+}
+
+.btn.red:hover, .btn.red:focus {
+  background-color: #c0392b;
+}
 
 
 
