--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -271,6 +271,7 @@ img[src="assets/svg/account-group.svg"], .dashboard-header {
   background-color: white;
   border-radius: 10px;
   padding: 10px;
+  margin-bottom: -2.4rem;
 }
 .announcements-container { 
   text-align: left;
@@ -312,13 +313,7 @@ img[src="assets/svg/account-group.svg"], .dashboard-header {
   overflow: hidden;
   align-items: flex-end;
 }
-.trending::before {
-  content: "Trending";
-  position: relative;
-  bottom: 6rem;
-  right: 5.4rem;
-  font-size: 1.5rem;
-}
+
 
 .trending-avatar-small {
   height: 3.2rem;
@@ -327,7 +322,7 @@ img[src="assets/svg/account-group.svg"], .dashboard-header {
   grid-column: 1;
   position: relative;
   left: 2rem;
-  bottom: 1.7rem;
+  top: .4rem;
 }
 .trending-username {
   color: #101010;
@@ -335,16 +330,19 @@ img[src="assets/svg/account-group.svg"], .dashboard-header {
   font-size: .8rem;
   grid-column: 2;
   position: relative;
-  bottom: 3.5rem;
+  bottom: 1.4rem;
 }
 .trending-motto {
   font-size: .7rem;
   grid-column: 2;
   position: relative;
-  bottom: 4rem;
+  bottom: 2rem;
   color: lightslategray;
 }
-
+.trending-header {
+  font-size: 1.5rem;
+  margin-bottom: -6rem;
+}
 
 
 /* Left orange sliver */
